# zed-x-one-rig

./: .gitignore  README.md  TASKS.md
calibration/: SHA256SUMS
calibration/active/: SN116863460.conf  zed_calibration_116863460.yml
calibration/factory/: SN304467158.conf  SN306605936.conf
config/: SHA256SUMS  field_console.env  rig.env  rig.yaml  virtual_xone_config.json
config/ros2/: cyclonedds-jetson.xml  cyclonedds.xml  field.yaml  jetson-installed-versions.txt  jetson-packages.txt  optional-packages.txt  outdoor.yaml  versions.env  (+1 more)
docs/: CALIBRATION.md  FIELD_CONSOLE.md  FIELD_GUIDE.md  NEAR_FIELD_MATH.md  RECORDER.md  REMOTE_REPLAY.md  ROS2_REMOTE_VIEWING.md  ROS2_VERIFICATION.md  SETUP.md
launchers/: ZED-Media-Server.desktop.in  ZED-ROS2-Virtual-Stereo.desktop.in  ZED-Virtual-Stereo-Recorder.desktop.in  ZED-Virtual-Stereo-Stream.desktop.in
prebuilt/: SHA256SUMS
recorder/: CMakeLists.txt
recorder/src/: main.cpp
rviz/: virtual_stereo.rviz
scripts/: build.sh  install.sh  install_desktop_launchers.sh  install_ros2_jetson.sh  install_ros2_remote.sh  launch_calibration.sh  launch_neural_viewer.sh  play_svo_ros2.sh  preflight_ros2.sh  record_virtual_stereo.sh  ros2_common.sh  run_svo_replay_session.sh  start_ros2_rviz.sh  start_ros2_virtual_stereo.sh  start_virtual_stereo_stream.sh  stop_virtual_stereo_stream.sh  verify_ros2_setup.sh  verify_setup.sh  zed_field_console.sh  zed_field_session.sh  zed_replay_console.sh  zed_replay_session.sh
tools/: analyze_svo_near_depth.py  highlight_svo_depth_band.py  zed_replay_command.py  zed_svo_status_monitor.py
(+8 files in other folders)
